app/scheduler/scheduler.less
.schedule-block-details {

    textarea {
        height: 340px;
        width: 340px;
        resize: none;

    }
}

.btn-trash {
    font-size: 14px;
    padding: 4px;
}

.panel-heading-text-drafts {
    text-align: center;
    margin-left: -51px;
    width: 100%;
    font-size: 16px;
}

.schedule-script-text-area {
    width: 100%;
    height: 100%;
    //  max-height: 375;
    border: 0;
    resize: none;
    padding: 0;
}

.schedule-block-id-text {
    font-size: 14px;
    font-weight: bold;
    margin-top: -8px;
    max-width: 130px;
    min-width: 130px;
    width: 130px;
    vertical-align: middle;
}

.schedule-block-name-div {
    max-width: 120px;
    min-width: 120px;
    margin-left: 4px;
    cursor: pointer;

    i {
        position: absolute;
        left: 5px;
        padding: 2px;
        font-size: 12px;
        max-width: 100px;
        overflow: hidden;
        top: 22px;
    }

    &:hover {
        overflow: visible;
        z-index: 1000;

        i {
            overflow: visible;
        }
    }
}

.inline-sb-button {
    max-width: 26px;
    max-height: 32px;
    margin: 0 !important;
    width: 26px !important;
}

@item-bg: #FFF;
@item-border-bottom: #9E9E9E;

.selected-resource-item {
    background: #B3E5FC !important;
    font-style: italic;

    span.resource-name {
        color: #333333;
    }
}

.resource-item {
    max-height: 32px;
    min-height: 32px;
    padding: 4px;
    min-width: 147px;
    border: 1px solid rgba(158, 158, 158, 0.3);
    overflow: hidden;
    &:hover {
        background-color: rgba(158, 158, 158, 0.1);
    }
}

.schedule-draft-item {
    position: relative;
    height: 38px;
    max-height: 38px;
    font-size: 12px;
    white-space: nowrap;
    direction: ltr;
    border: 1px solid rgba(158, 158, 158, 0.3);
    &:hover {
        background-color: rgba(158, 158, 158, 0.1);
    }
}

.md-virtual-repeat-container .md-virtual-repeat-offsetter {
    right: 0;
}

.resource-pool-item {
    height: 32px;
    padding: 2px;
    direction: ltr;
    border-bottom: 1px solid #9E9E9E;
    overflow: hidden;
}

.schedule-item {
    height: 48px;
    max-height: 48px;
    border-bottom: 1px solid #9E9E9E;
}

.schedule-item-description-input {
    margin-left: 5px;
    width: 180px;
    margin-top: 4px;
    background: transparent;
    border: 0;
    border-bottom: 1px solid transparent;

    &:hover {
        border-bottom: 1px solid #d3d3d3;
    }
}

.schedule-item-date-input {
    margin-left: 5px;
    margin-top: 4px;
    width: 110px;
    background: transparent;
    border: 0;
    margin-right: 3px;
    border-bottom: 2px solid transparent;

    &:hover {
        border-bottom: 1px solid #d3d3d3;
    }
}

.schedule-type-dropdown {
    margin-right: 5px;
    width: 150px;
    border: 0;
}

.schedule-item-input {
    height: 27px;
    margin-top: 4px;
}

.schedule-item-input-group {
    margin-left: 35px;
}

.selected-schedule-row {
    background: rgba(179, 229, 252, 0.3) !important;
    // box-shadow: 1px 2px 10px 0 #393939;
    color: #333333;
    &:hover {
        background-color: rgba(179, 229, 252, 0.5) !important;
    }
}

.schedule-row-executing {
    background: rgba(78, 175, 80, 0.4) !important;
    color: #333333;
    .manual-color {
        color: #1565C0;
    }
    &:hover {
        background-color: rgba(78, 175, 80, 0.6) !important;
    }
}

.schedule-row-executing-and-selected {
    background:  rgba(78, 175, 80, 0.6);
    // box-shadow: 1px 2px 10px 0 #393939;
    border-bottom: 1px solid transparent;
    color: #333333;
    .manual-color {
        color: #1565C0;
    }
    &:hover {
        background-color: rgba(78, 175, 80, 0.7) !important;
    }
}

.grid-dropdown {
    left: 0;
    display: block;
    width: 99%;
    height: 29px;
    padding: 4px 10px;
    background-color: #ffffff;
    background-image: none;
    border-radius: 4px;
}

.datepickerMenu {
    position: fixed;
    z-index: 1000;
    border: 1px solid #f1f1f1;
    border-radius: 4px;
    background-color: white;
    margin-top: 5px;
    color: #333333;
}

.schedule-block-script-window {
    padding: 0;
    overflow: auto;

    textarea {
        width: 100%;
        height: 100%;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        background-color: transparent;
        padding: 8px;
        border: none;
        resize: none;
        overflow: auto;
    }
}

.schedule-block-resource-window {
    padding: 0;
}

.schedule-block-list {
    position: relative;
    margin-top: 4px !important;
    margin-right: 0 !important;
    min-height: 200px;
    //    height: 375px;
    padding: 0 !important;
    height: 100%;
    overflow: auto;
}

.scheduler-nav-home-item {
    margin: 32px !important;
    cursor: pointer;
    height: 100px;
    min-width: 100px;
    max-width: 100px;
}

.invalid-date-error {
    border: 1px solid #F44336 !important;
}

/* After the transition this will be the only class remaining */
.slide-in-vertically-panel-content {
    transition: all 0.1s linear;
    max-height: 275px;
    overflow: visible;
}

/* Initial state when showing */
.slide-in-vertically-panel-content.ng-hide-remove {
    max-height: 0;
    overflow: hidden;
}

/* Will transition towards this state */
.slide-in-vertically-panel-content.ng-hide-add.ng-hide-add-active {
    max-height: 0;
    overflow: hidden;
}

/* Will transition towards this state */
.slide-in-vertically-panel-content.ng-hide-remove.ng-hide-remove-active {
    max-height: 275px;
    overflow: visible;
}

.confirm-deletion {
    top: 13px;
    left: 14px;
    position: absolute;
    opacity: 1;
    transition: transform 0.2s !important;
}

.confirm-deletion-question {
    top: 12px;
    left: 15px;
    position: absolute;
    //    transform: rotate(180deg);
    transition: transform 0.2s !important;
}

.confirm-deletion-question.ng-hide {
    opacity: 1;
    transform: rotate(-180deg);
}

.confirm-deletion.ng-hide {
    opacity: 1;
    transform: rotate(180deg);
}

.confirm-deletion-question.ng-hide-add.ng-hide-add-active {
    opacity: 0;
    transform: rotate(180deg);
}

.confirm-deletion.ng-hide-add.ng-hide-add-active {
    opacity: 0;
    transform: rotate(180deg);
}

.refresh-schedule-block-lists-button {
    bottom: 0;
    padding: 10px;
    //    pointer-events: none;
    position: fixed;
    right: 0;
    white-space: nowrap;
    z-index: 21;
    //    will-change: top,left;
}

.sb-row-button {
    float: right;
    width: 37px;
    height: 37px;
    color: #9E9E9E;
    //    border-radius: 25px;
    background: transparent;
    border: transparent;
    font-size: 18px;
    transition: 0s;

    &:hover {
        color: #212121;
        //        background: #e4e4e4;
    }

    &:active {
        color: #212121;
        //        background: #dbdbdb;
    }
}

.selected-draft-schedule-row {
    background: #B3E5FC !important;
    box-shadow: 1px 2px 10px 0 #393939;
    border-bottom: 1px solid transparent;
    color: #333333;
}

.subarray-item {
    width: 220px;
    height: 290px;
}

.md-subarray-fab-button {
    min-width: 38px;
    max-width: 38px;
    height: 32px;
    font-size: 14px;
    margin-right: 4px;
}

.subarray-container {
    margin-bottom: 8px;
    min-height: 200px;
}

.subarray-state-toolbar {
    max-height: 34px;
    min-height: 34px;
    margin-left: auto;
    margin-right: auto;
    max-width: 400px;
    min-width: 200px;
    text-transform: uppercase;
    font-weight: 500;
    box-shadow: none;
    font-size: 16px;
    cursor: pointer;
    border-radius: 3px;
}

.transparent-background {
    background: transparent !important;
}

.inline-svg-icon {
    svg {
        position: absolute;
        top: 0;
        left: 0;
    }
    position: absolute;
    top: 0;
    left: 0;
    transform: scale(0.3);
    stroke-width: 4;
}

.svg-subarray, .svg-receptor, {
    fill: currentColor !important;
    stroke: currentColor !important;
}

.svg-receptor-with-opacity {
    fill: currentColor !important;
}

.scheduler-inline-button {
    transition: 0s;
    width: 35px;
    height: 49px;
}

.scheduler-menu-item-button {
    width: 170px;
    font-size: 14px;
    height: 38px;
    span {
        margin-left: 6px;
    }
}

.maintenance-bg {
    background-color: rgba(206, 147, 216, 0.3);
}

.maintenance-bg-hover {
    background-color: rgba(206, 147, 216, 0.3);
    &:hover {
        background-color: rgba(206, 147, 216, 0.5);
    }
}

.faulty-border {
    border: 1px solid #F44336 !important;
}

.inline-action-button {
    min-width: 32px;
    max-width: 32px;
    max-height: 32px;
    min-height: 32px;
}

.no-margin-no-padding {
    margin: 0;
    padding: 0;
}

.config-label-list-item {
    min-width: 100px;
    min-height: 22px;
    max-height: 22px;
    cursor: pointer !important;
    padding: 2px 8px;

    &:hover {
        background-color: rgba(215, 215, 215, 0.3);
    }
}

.arrow-nav-icon {
    margin: 4px;
    font-size: 14px;
    opacity: 0.5;
}

.arrow-nav-icon-big {
    .arrow-nav-icon;
    font-size: 28px;
}

.overlay-progress-circular {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background: rgba(81, 81, 81, 0.25);
    cursor: not-allowed;
    z-index: 100;
}

.progress-bar-fill {
    top: 0 !important;
    z-index: -1;
    opacity: 0.4;
    height: 100% !important;
    div {
        top: 0 !important;
        height: 100% !important;
    }
}

.hide-row {
    max-height: 0 !important;
    min-height: 0 !important;
    border: 0;
}

.subarray-config-menu-button {
    text-transform: none;
    margin: 0 4px;
    padding: 0;
    font-size: 12px;
    min-width: auto;
    min-height: auto;
    line-height: normal;
    &:hover span {
        opacity: 1.0;
    }
}

.subarray-action-icon {
    font-size: 30px;
    height: 100%;
    padding: 6px;
    margin: 0 6px;
    border-radius: 50%;
}

.subarray-select-chevron {
    font-size: 12px;
    position: absolute;
    left: 0;
    opacity: 0.1;
    transition: opacity .25s ease-in-out;
    &:hover {
        opacity: 0.7;
    }
}

.hover-opacity {
    opacity: 0.3;
    transition: opacity .25s ease-in-out;
    &:hover {
        opacity: 1.0;
    }
}

.sb-wrapped-description {
    white-space: normal;
    word-break: break-all;
    word-wrap: break-word;
    overflow: hidden;
    text-overflow: ellipsis;
    height: 100%;
}

.subarray-config-container {
    position: absolute;
    padding: 0;
    top: 0;
    left: 0;
    right: 0;
    font-size: 12px;
    md-menu {
        margin: 0 2px;
        position: relative;
    }
}

.sb-details-pre {
    margin: 0;
    overflow: auto;
    white-space: pre-wrap;
    border-radius: 0;
}

